force-app/main/default/objects/FS_Customer_Input_Type__c/FS_Customer_Input_Type__c.object-meta.xml
<CustomObject>
    <label>Customer Input Type</label>
    <nameField>
        <label>Customer Input Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Input Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>