force-app/main/default/objects/FS_Customer_Input_Type__c/fields/Customer_Input_Type_ID__c.field-meta.xml
<CustomField>
    <fullName>Customer_Input_Type_ID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Customer Input Type ID</label>
    <type>Text</type>
</CustomField>