force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_7000_Select_Water_Button_Option__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Select_Water_Button_Option__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Select Water Button Option (7000 Series)</label>
    <type>Checkbox</type>
</CustomField>