force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_7000_Series_Brands_Option_Selections__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Brands_Option_Selections__c</fullName>
    <defaultValue>true</defaultValue>
    <label>7000 Series Brands Option Selections</label>
    <type>Checkbox</type>
</CustomField>