force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_7000_Series_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Ice_Fill_Requirements__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Indicate 7000 Series Ice-Fill Method</label>
    <type>Checkbox</type>
</CustomField>