force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_7000_Series_Top_Mnt_Ice_Maker_Instld__c.field-meta.xml
<CustomField>
    <fullName>FS_7000_Series_Top_Mnt_Ice_Maker_Instld__c</fullName>
    <defaultValue>true</defaultValue>
    <description>7000 Series</description>
    <label>#Planned Top-Mount Ice Maker</label>
    <type>Checkbox</type>
</CustomField>