force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Additional_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Notes</label>
    <type>Checkbox</type>
</CustomField>