force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Admin_User_Phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Admin_User_Phone__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Admin User Phone</label>
    <type>Checkbox</type>
</CustomField>