force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Ancillary_equipment_to_remain__c.field-meta.xml
<CustomField>
    <fullName>FS_Ancillary_equipment_to_remain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ancillary equipment to remain</label>
    <type>Checkbox</type>
</CustomField>