force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Bill_to_Address__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Bill to Address</label>
    <type>Checkbox</type>
</CustomField>