force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Bill_to_State__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_State__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill to State</label>
    <type>Checkbox</type>
</CustomField>