force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Bill_to_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>FS_Bill_to_Zip_Code__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bill to Zip Code</label>
    <type>Checkbox</type>
</CustomField>