force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_BillToAddressSameAsShipToAddress__c.field-meta.xml
<CustomField>
    <fullName>FS_BillToAddressSameAsShipToAddress__c</fullName>
    <defaultValue>true</defaultValue>
    <label>BillToAddressSameAsShipToAddress</label>
    <type>Checkbox</type>
</CustomField>