force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Cartridge_Delivery_Method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_Delivery_Method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cartridge Order/Delivery Method:</label>
    <type>Checkbox</type>
</CustomField>