force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Cartridge_payment_method__c.field-meta.xml
<CustomField>
    <fullName>FS_Cartridge_payment_method__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Method:</label>
    <type>Checkbox</type>
</CustomField>