force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_CCFS_2K_Conversion_Incentive__c.field-meta.xml
<CustomField>
    <fullName>FS_CCFS_2K_Conversion_Incentive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CCFS $2K Conversion Incentive</label>
    <type>Checkbox</type>
</CustomField>