force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Coca_Cola_Sales_Representative_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Coca_Cola_Sales_Representative_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coca-Cola Sales Representative Name</label>
    <type>Checkbox</type>
</CustomField>