force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Cokesmart_Admin_User_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Cokesmart_Admin_User_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cokesmart Admin User Name</label>
    <type>Checkbox</type>
</CustomField>