force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Cokesmart_Admin_Usr_phn__c.field-meta.xml
<CustomField>
    <fullName>FS_Cokesmart_Admin_Usr_phn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cokesmart Admin_User phone</label>
    <type>Checkbox</type>
</CustomField>