force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Cokesmart_standard_user_phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Cokesmart_standard_user_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cokesmart standard user phone</label>
    <type>Checkbox</type>
</CustomField>