force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Color_of_self_serve_units__c.field-meta.xml
<CustomField>
    <fullName>FS_Color_of_self_serve_units__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Color of 9000 Series units</label>
    <type>Checkbox</type>
</CustomField>