force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Contact_name_email_for_Order_Confir__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_name_email_for_Order_Confir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact name/email for Order Confir.</label>
    <type>Checkbox</type>
</CustomField>