force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Contact_Phone_for_Wired_Solution__c.field-meta.xml
<CustomField>
    <fullName>FS_Contact_Phone_for_Wired_Solution__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contact Phone for Wired Solution</label>
    <type>Checkbox</type>
</CustomField>