force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Contractor_Coordination_to_be_done_by__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_Coordination_to_be_done_by__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Coordination to be done by?</label>
    <type>Checkbox</type>
</CustomField>