force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Contractor_name__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor name</label>
    <type>Checkbox</type>
</CustomField>