force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Contractor_phone__c.field-meta.xml
<CustomField>
    <fullName>FS_Contractor_phone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor phone</label>
    <type>Checkbox</type>
</CustomField>