force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_CS_Sub_Trade_Channel__c.field-meta.xml
<CustomField>
    <fullName>FS_CS_Sub_Trade_Channel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>8000 Series - Sub-Trade Channel</label>
    <type>Checkbox</type>
</CustomField>