force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Current_Fountain_Equipment_Ownership__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Fountain_Equipment_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ownership of Current Fountain Equipment:</label>
    <type>Checkbox</type>
</CustomField>