force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Current_Fountn_Eqpmnt_Ownership__c.field-meta.xml
<CustomField>
    <fullName>FS_Current_Fountn_Eqpmnt_Ownership__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FS Current Fountn Eqpmnt Ownership</label>
    <type>Checkbox</type>
</CustomField>