force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_CustomCreatedBy__c.field-meta.xml
<CustomField>
    <fullName>FS_CustomCreatedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FS CustomCreatedBy</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Input_Types1</relationshipName>
    <type>Lookup</type>
</CustomField>