force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Dasani_Buttons__c.field-meta.xml
<CustomField>
    <fullName>FS_Dasani_Buttons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select Dasani Buttons Option</label>
    <type>Checkbox</type>
</CustomField>