force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Day_AM_or_Night_PM_Installation__c.field-meta.xml
<CustomField>
    <fullName>FS_Day_AM_or_Night_PM_Installation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Day(AM) or Night(PM) Installation</label>
    <type>Checkbox</type>
</CustomField>