force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Dispenser_Qty__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispenser_Qty__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Qty</label>
    <type>Checkbox</type>
</CustomField>