force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Dispensers_IC_Code_Description__c.field-meta.xml
<CustomField>
    <fullName>FS_Dispensers_IC_Code_Description__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dispensers (IC Code &amp; Description)</label>
    <type>Checkbox</type>
</CustomField>