force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Disposition_of_Current_BIB_rack__c.field-meta.xml
<CustomField>
    <fullName>FS_Disposition_of_Current_BIB_rack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicate Disposition of Current BIB Rack</label>
    <type>Checkbox</type>
</CustomField>