force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Disposition_of_Current_Equipment__c.field-meta.xml
<CustomField>
    <fullName>FS_Disposition_of_Current_Equipment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disposition of Current FountainEquipment</label>
    <type>Checkbox</type>
</CustomField>