force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_General_Contractor__c.field-meta.xml
<CustomField>
    <fullName>FS_General_Contractor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>General Contractor</label>
    <type>Checkbox</type>
</CustomField>