force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_If_above_is_no_what_location__c.field-meta.xml
<CustomField>
    <fullName>FS_If_above_is_no_what_location__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If above is no, what location</label>
    <type>Checkbox</type>
</CustomField>