force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_If_no_then_place_Freestyle_uni__c.field-meta.xml
<CustomField>
    <fullName>FS_If_no_then_place_Freestyle_uni__c</fullName>
    <defaultValue>false</defaultValue>
    <label>If above is no, then place Freestyle uni</label>
    <type>Checkbox</type>
</CustomField>