force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_if_yes_provide_details__c.field-meta.xml
<CustomField>
    <fullName>FS_if_yes_provide_details__c</fullName>
    <defaultValue>false</defaultValue>
    <label>if yes, provide details</label>
    <type>Checkbox</type>
</CustomField>