force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_IndicateDispositionOfCurrentBIBPump__c.field-meta.xml
<CustomField>
    <fullName>FS_IndicateDispositionOfCurrentBIBPump__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicate Disposition of Current BIB Pump</label>
    <type>Checkbox</type>
</CustomField>