force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Installation_Contact_Same_As__c.field-meta.xml
<CustomField>
    <fullName>FS_Installation_Contact_Same_As__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Contact Same As</label>
    <type>Checkbox</type>
</CustomField>