force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_InstallationContact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContact_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Contact Name</label>
    <type>Checkbox</type>
</CustomField>