force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_InstallationContactPreferredModeComm__c.field-meta.xml
<CustomField>
    <fullName>FS_InstallationContactPreferredModeComm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Installation Contact Preferred Mode Comm</label>
    <type>Checkbox</type>
</CustomField>