force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Is_an_approved_Water_Filter_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_an_approved_Water_Filter_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is an approved Water Filter Installed?</label>
    <type>Checkbox</type>
</CustomField>