force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Is_legacy_equipment_required__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_legacy_equipment_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is legacy equipment required</label>
    <type>Checkbox</type>
</CustomField>