force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Is_Scndry_Site_Asesment_Cnct__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_Scndry_Site_Asesment_Cnct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any Scndry Site Assessment Cnct</label>
    <type>Checkbox</type>
</CustomField>