force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Is_this_a_VMS_Customer__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_this_a_VMS_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is this a VMS Customer</label>
    <type>Checkbox</type>
</CustomField>