force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Is_thr_Secondary_Site_Assessment_Cnct__c.field-meta.xml
<CustomField>
    <fullName>FS_Is_thr_Secondary_Site_Assessment_Cnct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is there a sec. Site Assessment Cnct</label>
    <type>Checkbox</type>
</CustomField>