force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Kitchen_Ice_Fill_Requirements__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_Fill_Requirements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>What type of ice is used for Manual Fill</label>
    <type>Checkbox</type>
</CustomField>