force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Kitchen_Ice_Maker_Installed__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_Maker_Installed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOH Ice-Maker Installed</label>
    <type>Checkbox</type>
</CustomField>