force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_kitchen_Ice_maker_MFG__c.field-meta.xml
<CustomField>
    <fullName>FS_kitchen_Ice_maker_MFG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide Mfg. Back of House Ice-Maker</label>
    <type>Checkbox</type>
</CustomField>