force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Kitchen_Ice_maker_Model_no__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Ice_maker_Model_no__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide specific Model# for BackOfHouse</label>
    <type>Checkbox</type>
</CustomField>