force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Kitchen_Type_of_Ice__c.field-meta.xml
<CustomField>
    <fullName>FS_Kitchen_Type_of_Ice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicate type of ice from Back of House</label>
    <type>Checkbox</type>
</CustomField>