force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_known_construction_needs_i_e_cut_c__c.field-meta.xml
<CustomField>
    <fullName>FS_known_construction_needs_i_e_cut_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Any known construction needs (i.e. cut c</label>
    <type>Checkbox</type>
</CustomField>