force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Legacy_Dispenser_Install_Notes__c.field-meta.xml
<CustomField>
    <fullName>FS_Legacy_Dispenser_Install_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legacy Dispenser Install Notes:</label>
    <type>Checkbox</type>
</CustomField>