force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Line_Installation_Date__c.field-meta.xml
<CustomField>
    <fullName>FS_Line_Installation_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Line Installation Date</label>
    <type>Checkbox</type>
</CustomField>