force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_List_of_approved_Ice_Makers_Mfrs__c.field-meta.xml
<CustomField>
    <fullName>FS_List_of_approved_Ice_Makers_Mfrs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>List of approved Ice Makers Mfrs.</label>
    <type>Checkbox</type>
</CustomField>