force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_List_of_approved_Water_Filter_Mfrs__c.field-meta.xml
<CustomField>
    <fullName>FS_List_of_approved_Water_Filter_Mfrs__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Water Filter Supplier (8000 Series)</label>
    <type>Checkbox</type>
</CustomField>