force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Name_of_CO2_Distributor__c.field-meta.xml
<CustomField>
    <fullName>FS_Name_of_CO2_Distributor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name of CO2 Distributor</label>
    <type>Checkbox</type>
</CustomField>