force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_NewRemodelOutletOnlyEquipmentInstall__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyEquipmentInstall__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New/Remodel OutletOnly-Equipment Install</label>
    <type>Checkbox</type>
</CustomField>