force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_NewRemodelOutletOnlyProjectedFireUp__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedFireUp__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New/Remodel OutletOnly-Projected Fire-Up</label>
    <type>Checkbox</type>
</CustomField>