force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_NewRemodelOutletOnlyProjectedOpening__c.field-meta.xml
<CustomField>
    <fullName>FS_NewRemodelOutletOnlyProjectedOpening__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New/Remodel OutletOnly-ProjectedOpening</label>
    <type>Checkbox</type>
</CustomField>