force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Nightly_Connection_Time3_Dispenser_AM__c.field-meta.xml
<CustomField>
    <fullName>FS_Nightly_Connection_Time3_Dispenser_AM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Nightly Connection Time3 Dispenser (AM)</label>
    <type>Checkbox</type>
</CustomField>