force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Number_7000_unit__c.field-meta.xml
<CustomField>
    <fullName>FS_Number_7000_unit__c</fullName>
    <defaultValue>true</defaultValue>
    <label>#Planned 7000 Series Freestyle Dispenser</label>
    <type>Checkbox</type>
</CustomField>