force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_OB_Trainer__c.field-meta.xml
<CustomField>
    <fullName>FS_OB_Trainer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select On-Boarding Trainer Drop-down</label>
    <type>Checkbox</type>
</CustomField>