force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Offering_1__c.field-meta.xml
<CustomField>
    <fullName>FS_Offering_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offering 1</label>
    <type>Checkbox</type>
</CustomField>