force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_On_boarding_contact_name__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_contact_name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provide On-Boarding Contact Name</label>
    <type>Checkbox</type>
</CustomField>