force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_On_Boarding_Days_after_Install__c.field-meta.xml
<CustomField>
    <fullName>FS_On_Boarding_Days_after_Install__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On-Boarding -Days after Install</label>
    <type>Checkbox</type>
</CustomField>