force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_On_boarding_ship_to_address__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_ship_to_address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ship-to-Address</label>
    <type>Checkbox</type>
</CustomField>