force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_On_boarding_time_requested__c.field-meta.xml
<CustomField>
    <fullName>FS_On_boarding_time_requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Select On-Boarding - Outlet Open Time</label>
    <type>Checkbox</type>
</CustomField>