force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Opening_date_time__c.field-meta.xml
<CustomField>
    <fullName>FS_Opening_date_time__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opening date &amp; time</label>
    <type>Checkbox</type>
</CustomField>