force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Order_Conf_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>FS_Order_Conf_Contact_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Order Conf. Contact Name</label>
    <type>Checkbox</type>
</CustomField>