force-app/main/default/objects/FS_Customer_Input_Type__c/fields/FS_Other_Action__c.field-meta.xml
<CustomField>
    <fullName>FS_Other_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Action:</label>
    <type>Checkbox</type>
</CustomField>